subnet.tf
resource "google_compute_subnetwork" "subnet1" {
  name          = "test-subnetwork"
  ip_cidr_range = "10.2.0.0/16"
  region        = "us-central1"
  network       = google_compute_network.default.id
  secondary_ip_range {
    range_name    = "tf-test-secondary-range-update1"
    ip_cidr_range = "192.168.10.0/24"
  }
  private_ip_google_access = true
  log_config {
    aggregation_interval = "INTERVAL_5_SEC"
    metadata             = "EXCLUDE_ALL_METADATA"
  }
}
